--- a/templates/base.html
+++ b/templates/base.html
@@ -173,9 +173,9 @@
                     </ul>
                 </div>
 
-                <div class="rss">
-                    <a href="{% url 'rss' %}"><span class="ion-social-rss-outline"></span> RSS 订阅</a>
-                </div>
+{#                <div class="rss">#}
+{#                    <a href="{% url 'rss' %}"><span class="ion-social-rss-outline"></span> RSS 订阅</a>#}
+{#                </div>#}
             </aside>
         </div>
     </div>
